--- a/stalkea_clone/templates/home.html
+++ b/stalkea_clone/templates/home.html
@@ -15,6 +15,8 @@
     <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate">
     <meta http-equiv="Pragma" content="no-cache">
     <meta http-equiv="Expires" content="0">
+    <!-- Google Fonts -->
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./styles/main.css" data-precedence="next">
     <title>InstaSpy ® l Site Oficial l O que o teu Cônjuge faz no Instagram?</title>
     <meta name="description"
